--- a/learn.html
+++ b/learn.html
@@ -43,7 +43,7 @@
                         <img id="videoThumbnail" src="/images/image.png" alt="Video Thumbnail" class="video-large-thumbnail">
                         <div class="video-large-controls">
                             <button class="control-btn-large" id="playBtnLarge">
-                                <svg width="32" height="32" viewBox="0 0 24 24" fill="white">
+                                <svg width="32" height="32" viewBox="0 0 24 24" fill="black">
                                     <path d="M8 5v14l11-7z"/>
                                 </svg>
                             </button>
