--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <div class="col-lg-6">
                     <h2 class="hero-title">UNLOCK YOUR SKILLS AND BUILD FUTURE</h2>
                 </div>
+                <h3 class="hero-subtitle">Rise and Aspire, Valorize, Youth and Women, Ambition</h3>
             </div>
         </div>
     </section>
